tests/NormalTests/paczka1/fuzzy1/34709891.err
Error in line 2: 7zbI0sF A439 30,06
Error in line 3: 8kq03UEZ S302 43,4
Error in line 6: 7zbI0sF S769 27,3
Error in line 7: 8kq03UEZ A689 88,7
Error in line 16: 8kq03UEZ A439 -1,2
Error in line 18: 7zbI0sF A689 98,4
Error in line 19: 7zbI0sF S302 82,7
Error in line 17: jp5UaZ A689 35,4
Error in line 26: 8kq03UEZ S769 7&,8
Error in line 24: jp5UaZ S302 9,3
Error in line 11: 8kq03UEZ A439 20,0
Error in line 21: 7zbI0sF S769 69,8
Error in line 38: S769 S769 48,0
